# Rust-nginx-proxy

./: README.MD  docker-compose.yml  test.txt
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: main.rs
nginx/: default.conf
temp_html/: frontend-9ddfe527a2ad1523.js  frontend-9ddfe527a2ad1523_bg.wasm  index.html
