[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# ライブラリの設定を削除し、バイナリのみにする
[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.4", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
gloo-net = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
# または
[features]
csr = ["leptos/csr", "leptos/nightly"]
